@@ -11,7 +11,7 @@
  * @author Philip Weir
  * Based on the Markasjunk plugin by Thomas Bruederli
  *
- * Copyright (C) 2009-2014 Philip Weir
+ * Copyright (C) 2009-2018 Philip Weir
  *
  * This program is a Roundcube (https://roundcube.net) plugin.
  * For more information see README.md.
@@ -46,6 +46,14 @@ class markasjunk2 extends rcube_plugin
 
         $rcmail = rcube::get_instance();
         $this->load_config();
+        $this->_load_host_config();
+
+        // Host exceptions
+        $hosts = $rcmail->config->get('markasjunk2_allowed_hosts');
+        if (!empty($hosts) && !in_array($_SESSION['storage_host'], (array) $hosts)) {
+            return;
+        }
+
         $this->ham_mbox = $rcmail->config->get('markasjunk2_ham_mbox', 'INBOX');
         $this->spam_mbox = $rcmail->config->get('markasjunk2_spam_mbox', $rcmail->config->get('junk_mbox', null));
         $this->toolbar = $this->_set_toolbar_display($rcmail->config->get('markasjunk2_toolbar', -1), $rcmail->action);
@@ -295,5 +303,16 @@ class markasjunk2 extends rcube_plugin
         }
 
         return $a_uids;
+    }
+
+    private function _load_host_config()
+    {
+        $configs = rcube::get_instance()->config->get('markasjunk2_host_config');
+        if (empty($configs) || !array_key_exists($_SESSION['storage_host'], (array) $configs)) {
+            return;
+        }
+
+        $file = $configs[$_SESSION['storage_host']];
+        $this->load_config($file);
     }
 }
